# hdb-resale

./: .gitignore  README.md  pyproject.toml  requirements.txt
.dvc/: config
data/: .gitignore  BusStopLocation_Aug2025.zip.dvc  COE.csv.dvc  CPI.csv.dvc  HDB_Resale_Price_Index.csv.dvc  Household_Income.csv.dvc  Private_Property_Index.csv.dvc  Unemployment_Rate_SA.csv.dvc  base_dataset.parquet.dvc  base_dataset2.parquet.dvc  basic_eda.ju.py  cc_dataset.parquet.dvc  cleaned_data.pkl.dvc  cleaned_rawdata.pkl.dvc  data.csv.dvc  datasources.txt  feat_coe.parquet.dvc  feat_cpi.parquet.dvc  feat_income.parquet  feat_private_property.parquet.dvc  final_dataset.parquet.dvc  hdb_txn_raw_report.html.dvc  household_income.csv.dvc  household_income_per_flat_type.csv.dvc  household_income_per_member.csv.dvc  loc_food_centre.parquet.dvc  loc_jc_sch.parquet.dvc  loc_mall.parquet.dvc  loc_mixed_sch.parquet.dvc  loc_nparks.parquet.dvc  loc_pri_sch.parquet.dvc  loc_sec_sch.parquet.dvc  lta_mrt_station_exit.geojson.dvc  monthly_avg_sora_rates.csv.dvc  partial_dataset_1.parquet.dvc  sg_fac_loc.parquet  sg_fac_loc.parquet.dvc  sg_finalfac_loc.parquet.dvc  sg_regions.geojson.dvc  sg_towns.geojson.dvc  (+1 more)
model/: arimax_model.ju.py  arimax_model_2.ju.py  mgwr.ju.py
notebooks/: 0_basic_eda.ju.py  0a_create_feat_data.ju.py  0b_create_feat_data.ju.py  10_feat_income_by_flat.ju.py  11_feat_policy.ju.py  12_feat_sora.ju.py  13_feat_loc_transport.ju.py  14_feat_loc_dist_CBD.ju.py  15_feat_loc_hawker.ju.py  16_feat_loc_sports.ju.py  17_feat_loc_preschool.ju.py  18_feat_loc_prischool.ju.py  (+29 more)
(+79 files in other folders)
