[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.0",
    "aiolimiter>=1.2.1",
    "dvc>=3.63.0",
    "dvc-gdrive>=3.0.1",
    "gdrive>=0.1.5",
    "geopandas>=1.1.1",
    "jupynium>=0.2.6",
    "jupyter>=1.1.1",
    "jupyter-console>=6.6.3",
    "jupytext>=1.17.3",
    "nbclassic>=1.3.3",
    "nbstripout>=0.8.1",
    "notebook>=7.4.5",
    "numpy>=2.1.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
    "ydata-profiling>=4.17.0",
]

# pyproject.toml
[tool.pyright]
typeCheckingMode = "off"
